# calculatrice

./: LICENSE  README.md  microcalc.py  pyproject.toml
.github/workflows/: publish.yml
